[project]
name = "ab-mapper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "tensorboardx>=2.6.2.2",
    "torch",
]
